2020-04-25  Araki Ken  <arakiken@users.sf.net>

	* README.fb: Updated.

	* vt_parser.c: Minor fix.

2020-04-25  Araki Ken  <arakiken@users.sf.net>

	* configure.in, ui_display_x68kgrf.c:
	  If --with-gui=x68kgrf is specified, ui_display_x68kgrf.c includes
	  uitoolkit/fb/grfioctl.h instead of <machine/grfioctl.h>.

	* uitoolkit/fb/grfioctl.h: Added.

2020-04-23  Araki Ken  <arakiken@users.sf.net>

	* configure.in, main/Makefile.in:
	  "wscons" (NetBSD/wscons framebuffer),
	  "x68kgrf" (NetBSD/x68kgrf framebuffer) and
	  "scpc98" (FreeBSD/pc98 framebuffer) are added to --with-gui option.

2020-04-22  Araki Ken  <arakiken@users.sf.net>

	* fb/ui_window.c: ui_window_get_str() doesn't regard event->ksym
	  which is >= 0x100 as UCS on SDL2.

2020-04-19  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  - vte_terminal_match_remove_all() is implemented.
	  - vte_terminal_finalize() calls vte_terminal_match_remove_all()
	  - vte_terminal_match_add_{g}regex() keeps regex in
	    PVT(terminal)->match_{g|v}regexes and {g|vte}_regex_ref(regex).
	  - vte_get_encodings() and vte_get_encoding_supported() symbols are added.

2020-04-18  Araki Ken  <arakiken@users.sf.net>

	* vte.c: VTE_COMPILATION is defined.

2020-04-17  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c: add_root_to_display() is fixed not to destroy
	  disp->roots[0] and disp->num_roots.

2020-04-12  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c: IBUS_ID is removed from event sources.
	  (I forgot to remove '#ifndef USE_WAYLAND' in remove_event_source()
	   in revision 2742.)

2020-04-12  Araki Ken  <arakiken@users.sf.net>

	* gtk/README: Updated.

	* vte_xlib.c: If GdkDeviceManager is created with XInput2, warning message
	  is output to ~/.mlterm/msg.log.

	* configure.in: "-m 2755 -g utmp" and "-m 4755 -o root" are not set
	  to INSTALL_OPT on MacOSX/Quartz.

	* bl_utmp_sysv.c: /dev/ttys00N is supported.

	* baselib/configure.in: setut{x}ent() is preferred to utemper.
